fix: returned collapse state toggler for sidebar

--- a/src/widgets/sidebar/components/Sidebar/Sidebar.module.scss
+++ b/src/widgets/sidebar/components/Sidebar/Sidebar.module.scss
@@ -1,6 +1,10 @@
 .Sidebar {
     height: calc(100vh - var(--navbar-height));
     width: var(--sidebar-width);
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    padding: 20px;
     background: var(--inverted-bg-color);
     position: relative;
     transition: width 0.3s;
